Compilador/parser.out
Created by PLY version 3.0 (http://www.dabeaz.com/ply)

Grammar

Rule 1     S' -> program
Rule 2     program -> block
Rule 3     block -> inst block
Rule 4     block -> empty
Rule 5     inst -> ID DP
Rule 6     inst -> NOP
Rule 7     inst -> MOV REG COMMA NUM NUMBER
Rule 8     inst -> PRM REG COMMA REG
Rule 9     inst -> UMB REG COMMA REG COMMA NUM NUMBER
Rule 10    inst -> ORR REG COMMA REG COMMA REG
Rule 11    inst -> AND REG COMMA REG COMMA REG
Rule 12    inst -> AND REG COMMA REG COMMA NUM NUMBER
Rule 13    inst -> LSL REG COMMA REG COMMA NUM NUMBER
Rule 14    inst -> ADD REG COMMA REG COMMA REG
Rule 15    inst -> EOR REG COMMA REG COMMA REG
Rule 16    inst -> ADD REG COMMA REG COMMA NUM NUMBER
Rule 17    inst -> SUB REG COMMA REG COMMA REG
Rule 18    inst -> SUB REG COMMA REG COMMA NUM NUMBER
Rule 19    inst -> MUL REG COMMA REG COMMA REG
Rule 20    inst -> MUL REG COMMA REG COMMA NUM NUMBER
Rule 21    inst -> CMP REG COMMA REG
Rule 22    inst -> CMP REG COMMA NUM NUMBER
Rule 23    inst -> LDR REG COMMA LPC REG RPC COMMA REG
Rule 24    inst -> LDR REG COMMA LPC REG RPC COMMA MINUS REG
Rule 25    inst -> LDR REG COMMA LPC REG RPC COMMA NUM NUMBER
Rule 26    inst -> LDR REG COMMA LPC REG COMMA NUM NUMBER RPC
Rule 27    inst -> LDR REG COMMA LPC REG RPC
Rule 28    inst -> STR REG COMMA LPC REG RPC COMMA REG
Rule 29    inst -> STR REG COMMA LPC REG COMMA NUM NUMBER RPC
Rule 30    inst -> STR REG COMMA LPC REG RPC COMMA MINUS REG
Rule 31    inst -> STR REG COMMA LPC REG RPC COMMA NUM NUMBER
Rule 32    inst -> STR REG COMMA LPC REG RPC
Rule 33    inst -> B ID
Rule 34    inst -> BEQ ID
Rule 35    inst -> BNE ID
Rule 36    inst -> BGT ID
Rule 37    inst -> BLT ID
Rule 38    empty -> <empty>

Terminals, with rules where they appear

ADD                  : 13 15
AND                  : 10 11
B                    : 32
BEQ                  : 33
BGT                  : 35
BLT                  : 36
BNE                  : 34
CMP                  : 20 21
COMMA                : 6 7 8 8 9 9 10 10 11 11 12 12 13 13 14 14 15 15 16 16 17 17 18 18 19 19 20 21 22 22 23 23 24 24 25 25 26 27 27 28 28 29 29 30 30 31
DP                   : 4
EOR                  : 14
ID                   : 4 32 33 34 35 36
LDR                  : 22 23 24 25 26
LPC                  : 22 23 24 25 26 27 28 29 30 31
LSL                  : 12
MINUS                : 23 29
MOV                  : 6
MUL                  : 18 19
NOP                  : 5
NUM                  : 6 8 11 12 15 17 19 21 24 25 28 30
NUMBER               : 6 8 11 12 15 17 19 21 24 25 28 30
ORR                  : 9
PRM                  : 7
REG                  : 6 7 7 8 8 9 9 9 10 10 10 11 11 12 12 13 13 13 14 14 14 15 15 16 16 16 17 17 18 18 18 19 19 20 20 21 22 22 22 23 23 23 24 24 25 25 26 26 27 27 27 28 28 29 29 29 30 30 31 31
RPC                  : 22 23 24 25 26 27 28 29 30 31
STR                  : 27 28 29 30 31
SUB                  : 16 17
UMB                  : 8
error                : 

Nonterminals, with rules where they appear

block                : 1 2
empty                : 3
inst                 : 2
program              : 0

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . block
    (2) block -> . inst block
    (3) block -> . empty
    (4) inst -> . ID DP
    (5) inst -> . NOP
    (6) inst -> . MOV REG COMMA NUM NUMBER
    (7) inst -> . PRM REG COMMA REG
    (8) inst -> . UMB REG COMMA REG COMMA NUM NUMBER
    (9) inst -> . ORR REG COMMA REG COMMA REG
    (10) inst -> . AND REG COMMA REG COMMA REG
    (11) inst -> . AND REG COMMA REG COMMA NUM NUMBER
    (12) inst -> . LSL REG COMMA REG COMMA NUM NUMBER
    (13) inst -> . ADD REG COMMA REG COMMA REG
    (14) inst -> . EOR REG COMMA REG COMMA REG
    (15) inst -> . ADD REG COMMA REG COMMA NUM NUMBER
    (16) inst -> . SUB REG COMMA REG COMMA REG
    (17) inst -> . SUB REG COMMA REG COMMA NUM NUMBER
    (18) inst -> . MUL REG COMMA REG COMMA REG
    (19) inst -> . MUL REG COMMA REG COMMA NUM NUMBER
    (20) inst -> . CMP REG COMMA REG
    (21) inst -> . CMP REG COMMA NUM NUMBER
    (22) inst -> . LDR REG COMMA LPC REG RPC COMMA REG
    (23) inst -> . LDR REG COMMA LPC REG RPC COMMA MINUS REG
    (24) inst -> . LDR REG COMMA LPC REG RPC COMMA NUM NUMBER
    (25) inst -> . LDR REG COMMA LPC REG COMMA NUM NUMBER RPC
    (26) inst -> . LDR REG COMMA LPC REG RPC
    (27) inst -> . STR REG COMMA LPC REG RPC COMMA REG
    (28) inst -> . STR REG COMMA LPC REG COMMA NUM NUMBER RPC
    (29) inst -> . STR REG COMMA LPC REG RPC COMMA MINUS REG
    (30) inst -> . STR REG COMMA LPC REG RPC COMMA NUM NUMBER
    (31) inst -> . STR REG COMMA LPC REG RPC
    (32) inst -> . B ID
    (33) inst -> . BEQ ID
    (34) inst -> . BNE ID
    (35) inst -> . BGT ID
    (36) inst -> . BLT ID
    (37) empty -> .

    ID              shift and go to state 5
    NOP             shift and go to state 6
    MOV             shift and go to state 7
    PRM             shift and go to state 8
    UMB             shift and go to state 9
    ORR             shift and go to state 10
    AND             shift and go to state 11
    LSL             shift and go to state 12
    ADD             shift and go to state 13
    EOR             shift and go to state 14
    SUB             shift and go to state 15
    MUL             shift and go to state 16
    CMP             shift and go to state 17
    LDR             shift and go to state 18
    STR             shift and go to state 19
    B               shift and go to state 20
    BEQ             shift and go to state 21
    BNE             shift and go to state 22
    BGT             shift and go to state 23
    BLT             shift and go to state 24
    $end            reduce using rule 37 (empty -> .)

    program                        shift and go to state 1
    block                          shift and go to state 2
    inst                           shift and go to state 3
    empty                          shift and go to state 4

state 1

    (0) S' -> program .



state 2

    (1) program -> block .

    $end            reduce using rule 1 (program -> block .)


state 3

    (2) block -> inst . block
    (2) block -> . inst block
    (3) block -> . empty
    (4) inst -> . ID DP
    (5) inst -> . NOP
    (6) inst -> . MOV REG COMMA NUM NUMBER
    (7) inst -> . PRM REG COMMA REG
    (8) inst -> . UMB REG COMMA REG COMMA NUM NUMBER
    (9) inst -> . ORR REG COMMA REG COMMA REG
    (10) inst -> . AND REG COMMA REG COMMA REG
    (11) inst -> . AND REG COMMA REG COMMA NUM NUMBER
    (12) inst -> . LSL REG COMMA REG COMMA NUM NUMBER
    (13) inst -> . ADD REG COMMA REG COMMA REG
    (14) inst -> . EOR REG COMMA REG COMMA REG
    (15) inst -> . ADD REG COMMA REG COMMA NUM NUMBER
    (16) inst -> . SUB REG COMMA REG COMMA REG
    (17) inst -> . SUB REG COMMA REG COMMA NUM NUMBER
    (18) inst -> . MUL REG COMMA REG COMMA REG
    (19) inst -> . MUL REG COMMA REG COMMA NUM NUMBER
    (20) inst -> . CMP REG COMMA REG
    (21) inst -> . CMP REG COMMA NUM NUMBER
    (22) inst -> . LDR REG COMMA LPC REG RPC COMMA REG
    (23) inst -> . LDR REG COMMA LPC REG RPC COMMA MINUS REG
    (24) inst -> . LDR REG COMMA LPC REG RPC COMMA NUM NUMBER
    (25) inst -> . LDR REG COMMA LPC REG COMMA NUM NUMBER RPC
    (26) inst -> . LDR REG COMMA LPC REG RPC
    (27) inst -> . STR REG COMMA LPC REG RPC COMMA REG
    (28) inst -> . STR REG COMMA LPC REG COMMA NUM NUMBER RPC
    (29) inst -> . STR REG COMMA LPC REG RPC COMMA MINUS REG
    (30) inst -> . STR REG COMMA LPC REG RPC COMMA NUM NUMBER
    (31) inst -> . STR REG COMMA LPC REG RPC
    (32) inst -> . B ID
    (33) inst -> . BEQ ID
    (34) inst -> . BNE ID
    (35) inst -> . BGT ID
    (36) inst -> . BLT ID
    (37) empty -> .

    ID              shift and go to state 5
    NOP             shift and go to state 6
    MOV             shift and go to state 7
    PRM             shift and go to state 8
    UMB             shift and go to state 9
    ORR             shift and go to state 10
    AND             shift and go to state 11
    LSL             shift and go to state 12
    ADD             shift and go to state 13
    EOR             shift and go to state 14
    SUB             shift and go to state 15
    MUL             shift and go to state 16
    CMP             shift and go to state 17
    LDR             shift and go to state 18
    STR             shift and go to state 19
    B               shift and go to state 20
    BEQ             shift and go to state 21
    BNE             shift and go to state 22
    BGT             shift and go to state 23
    BLT             shift and go to state 24
    $end            reduce using rule 37 (empty -> .)

    inst                           shift and go to state 3
    block                          shift and go to state 25
    empty                          shift and go to state 4

state 4

    (3) block -> empty .

    $end            reduce using rule 3 (block -> empty .)


state 5

    (4) inst -> ID . DP

    DP              shift and go to state 26


state 6

    (5) inst -> NOP .

    ID              reduce using rule 5 (inst -> NOP .)
    NOP             reduce using rule 5 (inst -> NOP .)
    MOV             reduce using rule 5 (inst -> NOP .)
    PRM             reduce using rule 5 (inst -> NOP .)
    UMB             reduce using rule 5 (inst -> NOP .)
    ORR             reduce using rule 5 (inst -> NOP .)
    AND             reduce using rule 5 (inst -> NOP .)
    LSL             reduce using rule 5 (inst -> NOP .)
    ADD             reduce using rule 5 (inst -> NOP .)
    EOR             reduce using rule 5 (inst -> NOP .)
    SUB             reduce using rule 5 (inst -> NOP .)
    MUL             reduce using rule 5 (inst -> NOP .)
    CMP             reduce using rule 5 (inst -> NOP .)
    LDR             reduce using rule 5 (inst -> NOP .)
    STR             reduce using rule 5 (inst -> NOP .)
    B               reduce using rule 5 (inst -> NOP .)
    BEQ             reduce using rule 5 (inst -> NOP .)
    BNE             reduce using rule 5 (inst -> NOP .)
    BGT             reduce using rule 5 (inst -> NOP .)
    BLT             reduce using rule 5 (inst -> NOP .)
    $end            reduce using rule 5 (inst -> NOP .)


state 7

    (6) inst -> MOV . REG COMMA NUM NUMBER

    REG             shift and go to state 27


state 8

    (7) inst -> PRM . REG COMMA REG

    REG             shift and go to state 28


state 9

    (8) inst -> UMB . REG COMMA REG COMMA NUM NUMBER

    REG             shift and go to state 29


state 10

    (9) inst -> ORR . REG COMMA REG COMMA REG

    REG             shift and go to state 30


state 11

    (10) inst -> AND . REG COMMA REG COMMA REG
    (11) inst -> AND . REG COMMA REG COMMA NUM NUMBER

    REG             shift and go to state 31


state 12

    (12) inst -> LSL . REG COMMA REG COMMA NUM NUMBER

    REG             shift and go to state 32


state 13

    (13) inst -> ADD . REG COMMA REG COMMA REG
    (15) inst -> ADD . REG COMMA REG COMMA NUM NUMBER

    REG             shift and go to state 33


state 14

    (14) inst -> EOR . REG COMMA REG COMMA REG

    REG             shift and go to state 34


state 15

    (16) inst -> SUB . REG COMMA REG COMMA REG
    (17) inst -> SUB . REG COMMA REG COMMA NUM NUMBER

    REG             shift and go to state 35


state 16

    (18) inst -> MUL . REG COMMA REG COMMA REG
    (19) inst -> MUL . REG COMMA REG COMMA NUM NUMBER

    REG             shift and go to state 36


state 17

    (20) inst -> CMP . REG COMMA REG
    (21) inst -> CMP . REG COMMA NUM NUMBER

    REG             shift and go to state 37


state 18

    (22) inst -> LDR . REG COMMA LPC REG RPC COMMA REG
    (23) inst -> LDR . REG COMMA LPC REG RPC COMMA MINUS REG
    (24) inst -> LDR . REG COMMA LPC REG RPC COMMA NUM NUMBER
    (25) inst -> LDR . REG COMMA LPC REG COMMA NUM NUMBER RPC
    (26) inst -> LDR . REG COMMA LPC REG RPC

    REG             shift and go to state 38


state 19

    (27) inst -> STR . REG COMMA LPC REG RPC COMMA REG
    (28) inst -> STR . REG COMMA LPC REG COMMA NUM NUMBER RPC
    (29) inst -> STR . REG COMMA LPC REG RPC COMMA MINUS REG
    (30) inst -> STR . REG COMMA LPC REG RPC COMMA NUM NUMBER
    (31) inst -> STR . REG COMMA LPC REG RPC

    REG             shift and go to state 39


state 20

    (32) inst -> B . ID

    ID              shift and go to state 40


state 21

    (33) inst -> BEQ . ID

    ID              shift and go to state 41


state 22

    (34) inst -> BNE . ID

    ID              shift and go to state 42


state 23

    (35) inst -> BGT . ID

    ID              shift and go to state 43


state 24

    (36) inst -> BLT . ID

    ID              shift and go to state 44


state 25

    (2) block -> inst block .

    $end            reduce using rule 2 (block -> inst block .)


state 26

    (4) inst -> ID DP .

    ID              reduce using rule 4 (inst -> ID DP .)
    NOP             reduce using rule 4 (inst -> ID DP .)
    MOV             reduce using rule 4 (inst -> ID DP .)
    PRM             reduce using rule 4 (inst -> ID DP .)
    UMB             reduce using rule 4 (inst -> ID DP .)
    ORR             reduce using rule 4 (inst -> ID DP .)
    AND             reduce using rule 4 (inst -> ID DP .)
    LSL             reduce using rule 4 (inst -> ID DP .)
    ADD             reduce using rule 4 (inst -> ID DP .)
    EOR             reduce using rule 4 (inst -> ID DP .)
    SUB             reduce using rule 4 (inst -> ID DP .)
    MUL             reduce using rule 4 (inst -> ID DP .)
    CMP             reduce using rule 4 (inst -> ID DP .)
    LDR             reduce using rule 4 (inst -> ID DP .)
    STR             reduce using rule 4 (inst -> ID DP .)
    B               reduce using rule 4 (inst -> ID DP .)
    BEQ             reduce using rule 4 (inst -> ID DP .)
    BNE             reduce using rule 4 (inst -> ID DP .)
    BGT             reduce using rule 4 (inst -> ID DP .)
    BLT             reduce using rule 4 (inst -> ID DP .)
    $end            reduce using rule 4 (inst -> ID DP .)


state 27

    (6) inst -> MOV REG . COMMA NUM NUMBER

    COMMA           shift and go to state 45


state 28

    (7) inst -> PRM REG . COMMA REG

    COMMA           shift and go to state 46


state 29

    (8) inst -> UMB REG . COMMA REG COMMA NUM NUMBER

    COMMA           shift and go to state 47


state 30

    (9) inst -> ORR REG . COMMA REG COMMA REG

    COMMA           shift and go to state 48


state 31

    (10) inst -> AND REG . COMMA REG COMMA REG
    (11) inst -> AND REG . COMMA REG COMMA NUM NUMBER

    COMMA           shift and go to state 49


state 32

    (12) inst -> LSL REG . COMMA REG COMMA NUM NUMBER

    COMMA           shift and go to state 50


state 33

    (13) inst -> ADD REG . COMMA REG COMMA REG
    (15) inst -> ADD REG . COMMA REG COMMA NUM NUMBER

    COMMA           shift and go to state 51


state 34

    (14) inst -> EOR REG . COMMA REG COMMA REG

    COMMA           shift and go to state 52


state 35

    (16) inst -> SUB REG . COMMA REG COMMA REG
    (17) inst -> SUB REG . COMMA REG COMMA NUM NUMBER

    COMMA           shift and go to state 53


state 36

    (18) inst -> MUL REG . COMMA REG COMMA REG
    (19) inst -> MUL REG . COMMA REG COMMA NUM NUMBER

    COMMA           shift and go to state 54


state 37

    (20) inst -> CMP REG . COMMA REG
    (21) inst -> CMP REG . COMMA NUM NUMBER

    COMMA           shift and go to state 55


state 38

    (22) inst -> LDR REG . COMMA LPC REG RPC COMMA REG
    (23) inst -> LDR REG . COMMA LPC REG RPC COMMA MINUS REG
    (24) inst -> LDR REG . COMMA LPC REG RPC COMMA NUM NUMBER
    (25) inst -> LDR REG . COMMA LPC REG COMMA NUM NUMBER RPC
    (26) inst -> LDR REG . COMMA LPC REG RPC

    COMMA           shift and go to state 56


state 39

    (27) inst -> STR REG . COMMA LPC REG RPC COMMA REG
    (28) inst -> STR REG . COMMA LPC REG COMMA NUM NUMBER RPC
    (29) inst -> STR REG . COMMA LPC REG RPC COMMA MINUS REG
    (30) inst -> STR REG . COMMA LPC REG RPC COMMA NUM NUMBER
    (31) inst -> STR REG . COMMA LPC REG RPC

    COMMA           shift and go to state 57


state 40

    (32) inst -> B ID .

    ID              reduce using rule 32 (inst -> B ID .)
    NOP             reduce using rule 32 (inst -> B ID .)
    MOV             reduce using rule 32 (inst -> B ID .)
    PRM             reduce using rule 32 (inst -> B ID .)
    UMB             reduce using rule 32 (inst -> B ID .)
    ORR             reduce using rule 32 (inst -> B ID .)
    AND             reduce using rule 32 (inst -> B ID .)
    LSL             reduce using rule 32 (inst -> B ID .)
    ADD             reduce using rule 32 (inst -> B ID .)
    EOR             reduce using rule 32 (inst -> B ID .)
    SUB             reduce using rule 32 (inst -> B ID .)
    MUL             reduce using rule 32 (inst -> B ID .)
    CMP             reduce using rule 32 (inst -> B ID .)
    LDR             reduce using rule 32 (inst -> B ID .)
    STR             reduce using rule 32 (inst -> B ID .)
    B               reduce using rule 32 (inst -> B ID .)
    BEQ             reduce using rule 32 (inst -> B ID .)
    BNE             reduce using rule 32 (inst -> B ID .)
    BGT             reduce using rule 32 (inst -> B ID .)
    BLT             reduce using rule 32 (inst -> B ID .)
    $end            reduce using rule 32 (inst -> B ID .)


state 41

    (33) inst -> BEQ ID .

    ID              reduce using rule 33 (inst -> BEQ ID .)
    NOP             reduce using rule 33 (inst -> BEQ ID .)
    MOV             reduce using rule 33 (inst -> BEQ ID .)
    PRM             reduce using rule 33 (inst -> BEQ ID .)
    UMB             reduce using rule 33 (inst -> BEQ ID .)
    ORR             reduce using rule 33 (inst -> BEQ ID .)
    AND             reduce using rule 33 (inst -> BEQ ID .)
    LSL             reduce using rule 33 (inst -> BEQ ID .)
    ADD             reduce using rule 33 (inst -> BEQ ID .)
    EOR             reduce using rule 33 (inst -> BEQ ID .)
    SUB             reduce using rule 33 (inst -> BEQ ID .)
    MUL             reduce using rule 33 (inst -> BEQ ID .)
    CMP             reduce using rule 33 (inst -> BEQ ID .)
    LDR             reduce using rule 33 (inst -> BEQ ID .)
    STR             reduce using rule 33 (inst -> BEQ ID .)
    B               reduce using rule 33 (inst -> BEQ ID .)
    BEQ             reduce using rule 33 (inst -> BEQ ID .)
    BNE             reduce using rule 33 (inst -> BEQ ID .)
    BGT             reduce using rule 33 (inst -> BEQ ID .)
    BLT             reduce using rule 33 (inst -> BEQ ID .)
    $end            reduce using rule 33 (inst -> BEQ ID .)


state 42

    (34) inst -> BNE ID .

    ID              reduce using rule 34 (inst -> BNE ID .)
    NOP             reduce using rule 34 (inst -> BNE ID .)
    MOV             reduce using rule 34 (inst -> BNE ID .)
    PRM             reduce using rule 34 (inst -> BNE ID .)
    UMB             reduce using rule 34 (inst -> BNE ID .)
    ORR             reduce using rule 34 (inst -> BNE ID .)
    AND             reduce using rule 34 (inst -> BNE ID .)
    LSL             reduce using rule 34 (inst -> BNE ID .)
    ADD             reduce using rule 34 (inst -> BNE ID .)
    EOR             reduce using rule 34 (inst -> BNE ID .)
    SUB             reduce using rule 34 (inst -> BNE ID .)
    MUL             reduce using rule 34 (inst -> BNE ID .)
    CMP             reduce using rule 34 (inst -> BNE ID .)
    LDR             reduce using rule 34 (inst -> BNE ID .)
    STR             reduce using rule 34 (inst -> BNE ID .)
    B               reduce using rule 34 (inst -> BNE ID .)
    BEQ             reduce using rule 34 (inst -> BNE ID .)
    BNE             reduce using rule 34 (inst -> BNE ID .)
    BGT             reduce using rule 34 (inst -> BNE ID .)
    BLT             reduce using rule 34 (inst -> BNE ID .)
    $end            reduce using rule 34 (inst -> BNE ID .)


state 43

    (35) inst -> BGT ID .

    ID              reduce using rule 35 (inst -> BGT ID .)
    NOP             reduce using rule 35 (inst -> BGT ID .)
    MOV             reduce using rule 35 (inst -> BGT ID .)
    PRM             reduce using rule 35 (inst -> BGT ID .)
    UMB             reduce using rule 35 (inst -> BGT ID .)
    ORR             reduce using rule 35 (inst -> BGT ID .)
    AND             reduce using rule 35 (inst -> BGT ID .)
    LSL             reduce using rule 35 (inst -> BGT ID .)
    ADD             reduce using rule 35 (inst -> BGT ID .)
    EOR             reduce using rule 35 (inst -> BGT ID .)
    SUB             reduce using rule 35 (inst -> BGT ID .)
    MUL             reduce using rule 35 (inst -> BGT ID .)
    CMP             reduce using rule 35 (inst -> BGT ID .)
    LDR             reduce using rule 35 (inst -> BGT ID .)
    STR             reduce using rule 35 (inst -> BGT ID .)
    B               reduce using rule 35 (inst -> BGT ID .)
    BEQ             reduce using rule 35 (inst -> BGT ID .)
    BNE             reduce using rule 35 (inst -> BGT ID .)
    BGT             reduce using rule 35 (inst -> BGT ID .)
    BLT             reduce using rule 35 (inst -> BGT ID .)
    $end            reduce using rule 35 (inst -> BGT ID .)


state 44

    (36) inst -> BLT ID .

    ID              reduce using rule 36 (inst -> BLT ID .)
    NOP             reduce using rule 36 (inst -> BLT ID .)
    MOV             reduce using rule 36 (inst -> BLT ID .)
    PRM             reduce using rule 36 (inst -> BLT ID .)
    UMB             reduce using rule 36 (inst -> BLT ID .)
    ORR             reduce using rule 36 (inst -> BLT ID .)
    AND             reduce using rule 36 (inst -> BLT ID .)
    LSL             reduce using rule 36 (inst -> BLT ID .)
    ADD             reduce using rule 36 (inst -> BLT ID .)
    EOR             reduce using rule 36 (inst -> BLT ID .)
    SUB             reduce using rule 36 (inst -> BLT ID .)
    MUL             reduce using rule 36 (inst -> BLT ID .)
    CMP             reduce using rule 36 (inst -> BLT ID .)
    LDR             reduce using rule 36 (inst -> BLT ID .)
    STR             reduce using rule 36 (inst -> BLT ID .)
    B               reduce using rule 36 (inst -> BLT ID .)
    BEQ             reduce using rule 36 (inst -> BLT ID .)
    BNE             reduce using rule 36 (inst -> BLT ID .)
    BGT             reduce using rule 36 (inst -> BLT ID .)
    BLT             reduce using rule 36 (inst -> BLT ID .)
    $end            reduce using rule 36 (inst -> BLT ID .)


state 45

    (6) inst -> MOV REG COMMA . NUM NUMBER

    NUM             shift and go to state 58


state 46

    (7) inst -> PRM REG COMMA . REG

    REG             shift and go to state 59


state 47

    (8) inst -> UMB REG COMMA . REG COMMA NUM NUMBER

    REG             shift and go to state 60


state 48

    (9) inst -> ORR REG COMMA . REG COMMA REG

    REG             shift and go to state 61


state 49

    (10) inst -> AND REG COMMA . REG COMMA REG
    (11) inst -> AND REG COMMA . REG COMMA NUM NUMBER

    REG             shift and go to state 62


state 50

    (12) inst -> LSL REG COMMA . REG COMMA NUM NUMBER

    REG             shift and go to state 63


state 51
